Fixed sometimes accidentally selecting the save game toast message when shift clicking to buy some items quickly

--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -10,6 +10,8 @@
 	font-weight: bold;
 	font-size: 24px;
 	color: #333333;
+
+	pointer-events: none;
 }
 
 .messageStart {
